feat: updated responses & tests, add laravel resources
Обновил функционал объявлений под требования:
возможность сортировки: по цене (возрастание/убывание) и по дате создания (возрастание/убывание),
ссылка на главное фото (первое в списке),
 ID созданного объявления
